--- a/css/main.css
+++ b/css/main.css
@@ -1,109 +1,11 @@
-body {
-    margin: 0;
-}
+/* SETUP */
+@import url("setup/mq.css");
 
-button {
-    cursor: pointer;
-}
+/* BASICS */
+@import url("basics/base.css");
+@import url("basics/helpers.css");
+@import url("basics/layout.css");
 
-.main-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    font-size: 1.3em;
-
-    background-color: rgb(128, 24, 24);
-}
-
-.logo {
-    margin-inline-start: 15px;
-
-    color: white;
-}
-
-.main-nav {
-    width: 40%;
-}
-
-.main-nav-list {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-    color: white
-}
-
-a {
-    /* text-decoration-line: none; */
-    color: white
-}
-
-.img-gallery {
-    align-items: center;
-    width:80vw;
-    margin-inline: 60px;
-    /* margin-inline-end: 60px; */
-}
-
-.gallery-grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    
-    justify-self: center;
-    /* margin-inline: 60px; */
-    width: 100%;
-}
-
-.gallery-grid-container img {
-    width: 100%;
-
-    cursor: pointer;
-}
-
-.search-bar {
-    display: flex;
-    justify-content: center;
-
-    margin: 10px auto;
-}
-
-.search-bar input {
-    border: none;
-    border-bottom: 1px solid;
-}
-
-.filter-container {
-    display: flex;
-    justify-content: center;
-
-    gap: 15px
-}
-
-.filter-container button {
-    border: none;
-
-    background-color: white;
-}
-
-.meme-editor {
-    display: flex;
-}
-
-canvas {
-    
-}
-
-.editor-tools {
-    width: 100%;
-}
-
-.main-footer {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-
-    height: 80px;
-    margin-bottom: 0;
-    background-color: rgb(128, 24, 24);
-}
+/* COMPONENTS */
+@import url("components/gallery.css");
+@import url("components/meme.css");
