--- a/css/main.css
+++ b/css/main.css
@@ -7,5 +7,8 @@
 @import url("basics/layout.css");
 
 /* COMPONENTS */
+@import url("components/main-screen.css");
+@import url("components/main-header.css");
 @import url("components/gallery.css");
 @import url("components/meme.css");
+@import url("components/footer.css");
