--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -1,98 +1,77 @@
-body {
-    margin: 0;
-}
-
-button {
-    cursor: pointer;
-}
-
-.main-header {
-    display: flex;
+.img-gallery-container {
+    display: block;
     align-items: center;
-    justify-content: space-between;
-
-    font-size: 1.3em;
-
-    background-color: rgb(128, 24, 24);
+    justify-content: center;
+    width:100%;
+    margin-inline: 20px;
 }
 
-.logo {
-    margin-inline-start: 15px;
-
-    color: white;
-}
-
-.main-nav {
-    width: 40%;
-}
-
-.main-nav-list {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-    color: white
-}
-
-a {
-    /* text-decoration-line: none; */
-    color: white
-}
-
-.img-gallery {
-    align-items: center;
-    width:80vw;
-    margin-inline: 60px;
-    /* margin-inline-end: 60px; */
-}
-
-.gallery-grid-container {
+.img-gallery-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     
-    justify-self: center;
-    /* margin-inline: 60px; */
-    width: 100%;
+    padding: 5px;
+    background-color: lightgray;
 }
 
-.gallery-grid-container img {
-    width: 100%;
+.img-gallery-grid .gallery-img {
+    padding: 5px;
+}
 
+.img-gallery-grid img {
+    width: 100%;
+    margin-bottom: -5px;
+    
     cursor: pointer;
 }
 
-.search-bar {
-    display: flex;
-    justify-content: center;
+.search-filter-options {
+    margin-block: 20px;
+}
 
-    margin: 10px auto;
+.search-bar {
+    /* display: flex; */
+    /* justify-content: start; */
+    /* flex-grow: 1; */
+    
+    margin: 20px auto;
 }
 
 .search-bar input {
+    font: 1.5em sans-serif;
+    
     border: none;
     border-bottom: 1px solid;
 }
 
-.filter-container {
-    display: flex;
-    justify-content: center;
-
-    gap: 15px
-}
-
 .filter-container button {
+    font: 1.3em sans-serif;
     border: none;
 
     background-color: white;
 }
 
+@media (min-width: 860px) {
+    .img-gallery-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    
+    .search-filter-options {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        /* align-items: center; */
+        /* justify-content: center; */
+    }
 
-.main-footer {
-    display: grid;
-    align-items: center;
-    justify-content: center;
 
-    height: 80px;
-    margin-bottom: 0;
-    background-color: rgb(128, 24, 24);
+    .filter-container {
+        margin-inline-start: 20px;
+        font-size: large;
+    }
+
+    .img-gallery-container {
+        margin-inline: 40px;
+    }
+
+
 }
