--- a/css/components/meme.css
+++ b/css/components/meme.css
@@ -1,19 +1,143 @@
-.meme-editor {
+.meme-editor-container {
     display: flex;
-
+    flex-direction: column;
+    
+    width: 100%;
+    height: calc(100vh - 200px);
+    margin-inline: 20px;
+    
     background-color: lightgray;
+}
+
+.canvas-container {
+    display: grid;
+    grid-template-columns: 1fr 500px 1fr;
+    /* flex: 1 1 0px; */
+    /* height: calc(50vh - 100px); */
+    /* height: 0; */
+    margin-top: 10px;
+
+    /* align-items: center; */
+    justify-content: center;
+
+}
+
+.meme-editor-canvas {
+    /* flex: 0 0 0px; */
+    grid-column: 2;
+    
+    width: 500px;
+    height: 500px;
+    
+    display: block;
 }
 
 .editor-tools {
     display: grid;
+    grid-template-rows: 1fr 1fr 2fr 1fr;
     
-    width: 100%;
+    flex: 1 1 0px;
+    height: 0;
+
+    width: 500px;
+    
+    align-self: center;
+    justify-content: space-evenly;
 }
 
-canvas {
-    /* display: inline; */
+.meme-line-actions {
+    gap: 15px;
 }
 
-.actions {
+.content-actions {
     display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    
+    justify-self: center;
+    align-items: center;
+    /* justify-content: space-between; */
+    gap: 15px;
+    /* width: max-content; */
 }
+
+.select-font {
+    grid-column: span 3;
+}
+
+.file-actions {
+    gap: 15px;
+}
+
+.meme-text-input {
+    margin-top: 10px;
+    margin-inline: 25px;
+    
+    border-radius: 15px;
+}
+
+.editor-tools .btn {
+    padding: 10px 20px;
+    border: none; 
+    /* width: 50px; */
+    /* height: 30px; */
+    
+    background-size: contain; 
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.btn-remove-line {
+    background-image: url('/Icons/trash.png');
+}
+
+.btn-duplicate-line {
+    background-image: url('/Icons/add.png');
+}
+
+.btn-select-next {
+    background-image: url('/Icons/up-and-down-opposite-double-arrows-side-by-side.png');
+}
+
+.btn-enlarge-font {
+    background-image: url('/Icons/increase\ font\ -\ icon.png');
+}
+
+.btn-shrink-font {
+    background-image: url('/Icons/decrease\ font\ -\ icon.png');
+}
+
+.btn-align-start {
+    background-image: url('/Icons/align-to-left.png');
+}
+
+.btn-align-center {
+    background-image: url('/Icons/center-text-alignment.png');
+}
+
+.btn-align-end {
+    background-image: url('/Icons/align-to-right.png');
+}
+
+.btn-share {
+    background-image: url('/Icons/facebook-logo.png');
+}
+
+#set-border-color {
+    background-image: url('/Icons/text\ stroke.png')
+}
+
+
+@media (min-width: 860px) {
+    .meme-editor-container {
+        /* flex-direction: row; */
+        /* align-items: center; */
+        /* justify-content: space-evenly; */
+    }
+
+    .editor-tools {
+
+    }
+}
+
+    
