--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -2,12 +2,15 @@
     height: 100px;
     font-size: 3em;
 
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+font-family: ;
     background-color: rgb(128, 24, 24);
 }
 
 .logo {
     margin-inline-start: 20px;
 
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
 }
 
@@ -35,11 +38,20 @@
 @media (min-width: 860px) {
     .main-nav {
         margin-right: 40px;
+        
+        
     }
 
     .main-nav-list {
+        color: white;
+        
         justify-content: end;
-        gap: 20px;
+        gap: 40px;
+    }
+
+    .main-nav-list a {
+        color: white;
+        font-size: 0.8em;
     }
 
     .logo {
